--- a/feature/onboarding/src/main/res/layout/fragment_onboarding.xml
+++ b/feature/onboarding/src/main/res/layout/fragment_onboarding.xml
@@ -8,6 +8,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         app:menu="@menu/onboarding_menu"
+        app:title=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
