Add my loans screen

--- a/feature/menupage/src/main/res/layout/fragment_menu_page.xml
+++ b/feature/menupage/src/main/res/layout/fragment_menu_page.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/backgroundColor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_with_info"
+        app:title="Меню" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
@@ -14,4 +24,4 @@
         tools:listitem="@layout/menu_item">
 
     </androidx.recyclerview.widget.RecyclerView>
-</FrameLayout>
+</LinearLayout>
